fix background circle going off screen

--- a/src/components/BackgroundCircle/backgroundcircle.css
+++ b/src/components/BackgroundCircle/backgroundcircle.css
@@ -16,11 +16,13 @@
     border-radius: 50%;
 
     animation: rotate 20s infinite;
+    overflow: hidden;
 }
 
 .blur {
     width: 100%;
     height: 100%;
+    overflow: hidden;
 
     position: absolute;
     z-index: 2;
