--- a/src/index.css
+++ b/src/index.css
@@ -39,4 +39,7 @@ body {
 
 #root {
   height: 100%;
+  max-height: 100%;
+
+  overflow: hidden;
 }
